# edulogicsai-platform

./: .claudeignore  .gitignore  CLAUDE.md  Coaching-Recap-Notes.md  MCATai-Running-Notes.md  README.md  package-lock.json  package.json  tsconfig.base.json
.claude/: settings.local.json.backup
apps/backend/: main.py  pyproject.toml  requirements.txt
apps/backend/api/: chat.py
apps/backend/auth/: jwt_verifier.py
apps/backend/config/: litellm.yaml
apps/backend/db/: agent_persistence.py  live_agent_input.py  pool.py  repositories.py  tenant_scope.py
apps/backend/domains/_contracts/: agent_io.py  base_agent.py  domain_config.py  domain_registry.py
apps/backend/domains/mcat/: domain_config.py
apps/backend/domains/mcat/agents/: aria.py  llm_support.py  mira.py  quinn.py
apps/backend/domains/mcat/prompts/: mira_v1.md
apps/backend/llm_gateway/: client.py
apps/backend/nexus/: graph_builder.py  graph_state.py  intent_classifier.py  supervisor.py  tenant_context.py  turn_runner.py
apps/backend/prompt_registry/: client.py
apps/backend/tests/: conftest.py  test_agent_io_contracts.py  test_agent_persistence.py  test_aria.py  test_chat_endpoint.py  test_domain_config.py  test_domain_registry.py  test_graph_builder.py  test_intent_classifier.py  test_litellm_config.py  test_live_agent_input.py  test_llm_gateway_client.py  test_mira.py  test_no_domain_leakage.py  test_prompt_registry.py  test_quinn.py  test_repositories.py  test_supervisor.py  test_tenant_context.py  test_turn_runner.py
changes/: INDEX.md
sdd/: sdd-settings.yaml
specs/: SNAPSHOT.md
(+130 files in other folders)
